--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -455,8 +455,8 @@
         });
 
         function activation(x) {
-            return x;
-            //return (Math.tanh(x));
+            //return x;
+            return (Math.tanh(x));
         }
 
 
