--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -13,6 +13,7 @@
         </div>
         <button id="mutate" onclick="sim.mutate(0.1)">Mutate</button>
         <button id="evolve" onclick="sim.evolve()">next generation</button>
+        <button id="fastForward" onclick="fastForward(10)">fast forward 10 generations</button>
         
         </br>
         </br>
