--- a/stuff/ml_sus.html
+++ b/stuff/ml_sus.html
@@ -3,7 +3,7 @@
         <script href="title.js"></script>
         <link rel="stylesheet" type="text/css" href="../style.css">    
         <script src="https://unpkg.com/brain.js@2.0.0-beta.15/dist/browser.js"></script>
-        <script src="tensorSus_player.js"></script>
+        <script src="ml_sus.js"></script>
 
     </head>
     <body>
