--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -17,7 +17,7 @@
             <label id="stats">Stats:</label>
         </div>
         <canvas id="performanceGraph" width="500" height="300" style="border: 1px solid black; background-color: aliceblue;"></canvas>
-        <button id="mutate" onclick="sim.mutate(0.1)">Mutate</button>
+        <button id="mutate" onclick="sim.mutate(0.3)">Mutate</button>
         <button id="fastForward" onclick="fastForward(10)">fast forward 10 generations</button>
         
         </br>
@@ -28,7 +28,16 @@
     </br>
     <button id="importClipboard" onclick="importClipboard()">import clipboard</button>
     <button id="exportClipboard" onclick="exportClipboard()">export clipboard</button>
-
+    <br>
+    <br>
+    <br>
+    <div id="changelog">
+            <li>implemented: proper fish serialization</li>
+            <li>changed fastForward logic</li>
+            <li>reduced mutation rate</li>
+            <li>"top fish of all times" will be kept permanently until a better one appears</li>
+            <li>actual physics engine</li>
+    </div>
     </body>
 
 
@@ -197,7 +206,7 @@
         function importOne() {
             navigator.clipboard.readText().then(text => {
                 let data = JSON.parse(text);
-                sim.fishes[inspectedFish].deserialize(world,data);
+                sim.fishes[inspectedFish]=Fish.deserialize(sim,data);
             });
         }
 
