--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -32,7 +32,8 @@
     <br>
     <br>
     <div id="changelog">
-            <li>implemented: proper fish serialization</li>
+            <li>added changelog</li>
+            <li>proper fish serialization</li>
             <li>changed fastForward logic</li>
             <li>reduced mutation rate</li>
             <li>"top fish of all times" will be kept permanently until a better one appears</li>
